# UDP_UPX_Test

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt
UPX/: UPX.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
cmake/: CMakeCPack.cmake  LinuxInfo.cmake  QtTranslanion.cmake
pro/: .gitignore  upx-test.pro
src/: main.cpp  mainwindow.cpp  mainwindow.h  version.h  version.h.in
translations/: upx-test.ru.ts
ui/: mainwindow.ui
